# Vibe-Visual-Novel

./: .gitignore  README.md  package-lock.json  package.json
sidecar/: README.md  main.py  requirements.txt  test_main.py
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: character_template.rs  generation.rs  lib.rs  llm.rs  main.rs  regularize.rs  version_history.rs  world_state.rs
src/bridge/: PreviewBridgeClient.ts  protocol.ts
